# happy-manager

./: .gitignore  pyproject.toml
src/: duplicate_finder.py  main.py  move_sorted.py  patterns.py  settings.py
src/utils/: files.py  hashes.py  logs.py
tests/: test_main.py  test_patterns.py  test_settings.py
