[tool.poetry]
name = "happy-man"
version = "0.1.0"
description = "CNC Quilting design manager for HAPPY quilting machine."
authors = ["Rui Antunes <ruiantunes@jjlouro.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyembroidery = "^1.5.0"
pillow = "^10.1.0"
tomli-w = "^1.0.0"
wmi = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pyinstaller = "^6.3.0"
pre-commit = "^3.6.0"

[tool.ruff]
ignore = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
